tests/baselines/reference/unusedImports_entireImportDeclaration.errors.txt
/b.ts(1,1): error TS6192: All imports in import declaration are unused.
/b.ts(2,1): error TS6192: All imports in import declaration are unused.
/b.ts(4,19): error TS6133: 'a2' is declared but its value is never read.
/b.ts(4,28): error TS6133: 'b2' is declared but its value is never read.
/b.ts(6,17): error TS6133: 'ns2' is declared but its value is never read.
/b.ts(8,8): error TS6133: 'd5' is declared but its value is never read.


==== /a.ts (0 errors) ====
    export const a = 0;
    export const b = 0;
    export default 0;
    
==== /b.ts (6 errors) ====
    import d1, { a as a1, b as b1 } from "./a";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6192: All imports in import declaration are unused.
    import d2, * as ns from "./a";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6192: All imports in import declaration are unused.
    
    import d3, { a as a2, b as b2 } from "./a";
                      ~~
!!! error TS6133: 'a2' is declared but its value is never read.
                               ~~
!!! error TS6133: 'b2' is declared but its value is never read.
    d3;
    import d4, * as ns2 from "./a";
                    ~~~
!!! error TS6133: 'ns2' is declared but its value is never read.
    d4;
    import d5, * as ns3 from "./a";
           ~~
!!! error TS6133: 'd5' is declared but its value is never read.
    ns3;
    